--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "parcel build index.pug"
+    "now-build": "parcel build index.pug"
   },
   "repository": {
     "type": "git",
