--- a/now.json
+++ b/now.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
   "builds": [
-    { "src": "package.json", "use": "now-parcel" }
+    { "src": "package.json", "use": "@now/static-build" }
   ]
 }
