--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/peter-nikitin/lashmanova-2020#readme",
   "devDependencies": {
+    "parcel-bundler": "^1.12.4",
     "pug": "^2.0.4",
     "sass": "^1.26.5"
   },
