--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "now-build": "parcel build index.pug",
+    "build": "parcel build index.pug",
     "start": "parcel index.pug"
   },
   "repository": {
@@ -20,10 +20,12 @@
   "homepage": "https://github.com/peter-nikitin/lashmanova-2020#readme",
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
+    "parcel-plugin-imagemin": "^4.0.1",
     "pug": "^2.0.4",
     "sass": "^1.26.5"
   },
   "dependencies": {
+    "lazysizes": "^5.2.2",
     "normalize.css": "8.0.1"
   }
 }
